// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should match snapshot 1`] = `
.c1 {
  width: 100%;
  border: none;
  height: 8px;
}

.c1.c1,
.c1::-webkit-progress-value,
.c1[value]::-webkit-progress-bar,
.c1:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-moz-progress-bar,
.c1[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c1::-webkit-progress-value {
  background-color: #FF874C;
}

.c1.c1,
.c1:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c1[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c2 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="1"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
      value="60"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with all variants 1`] = `
.c10 {
  width: 100%;
  border: none;
  height: 8px;
}

.c10.c10,
.c10::-webkit-progress-value,
.c10[value]::-webkit-progress-bar,
.c10:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c10:not(value)::-moz-progress-bar,
.c10[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c10:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c10::-webkit-progress-value {
  background-color: #FF874C;
}

.c10.c10,
.c10:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c10[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #D8385E;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #D8385E;
}

.c5 {
  width: 100%;
  border: none;
  height: 8px;
}

.c5.c5,
.c5::-webkit-progress-value,
.c5[value]::-webkit-progress-bar,
.c5:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c5:not(value)::-moz-progress-bar,
.c5[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c5:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c5::-webkit-progress-value {
  background-color: #231B22;
}

.c5.c5,
.c5:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c5[value]::-moz-progress-bar {
  background-color: #231B22;
}

.c6 {
  width: 100%;
  border: none;
  height: 8px;
}

.c6.c6,
.c6::-webkit-progress-value,
.c6[value]::-webkit-progress-bar,
.c6:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c6:not(value)::-moz-progress-bar,
.c6[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c6:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c6::-webkit-progress-value {
  background-color: #1D856C;
}

.c6.c6,
.c6:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c6[value]::-moz-progress-bar {
  background-color: #1D856C;
}

.c7 {
  width: 100%;
  border: none;
  height: 8px;
}

.c7.c7,
.c7::-webkit-progress-value,
.c7[value]::-webkit-progress-bar,
.c7:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c7:not(value)::-moz-progress-bar,
.c7[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c7:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c7::-webkit-progress-value {
  background-color: #FFC24C;
}

.c7.c7,
.c7:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c7[value]::-moz-progress-bar {
  background-color: #FFC24C;
}

.c8 {
  width: 100%;
  border: none;
  height: 8px;
}

.c8.c8,
.c8::-webkit-progress-value,
.c8[value]::-webkit-progress-bar,
.c8:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c8:not(value)::-moz-progress-bar,
.c8[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c8:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c8::-webkit-progress-value {
  background-color: #7068D4;
}

.c8.c8,
.c8:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c8[value]::-moz-progress-bar {
  background-color: #7068D4;
}

.c9 {
  width: 100%;
  border: none;
  height: 8px;
}

.c9.c9,
.c9::-webkit-progress-value,
.c9[value]::-webkit-progress-bar,
.c9:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c9:not(value)::-moz-progress-bar,
.c9[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c9:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c9::-webkit-progress-value {
  background-color: #FFB0A7;
}

.c9.c9,
.c9:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c9[value]::-moz-progress-bar {
  background-color: #FFB0A7;
}

.c11 {
  width: 100%;
  border: none;
  height: 8px;
}

.c11.c11,
.c11::-webkit-progress-value,
.c11[value]::-webkit-progress-bar,
.c11:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c11:not(value)::-moz-progress-bar,
.c11[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c11:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c11::-webkit-progress-value {
  background-color: #FF4438;
}

.c11.c11,
.c11:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c11[value]::-moz-progress-bar {
  background-color: #FF4438;
}

.c12 {
  width: 100%;
  border: none;
  height: 8px;
}

.c12.c12,
.c12::-webkit-progress-value,
.c12[value]::-webkit-progress-bar,
.c12:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c12:not(value)::-moz-progress-bar,
.c12[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c12:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c12::-webkit-progress-value {
  background-color: #710252;
}

.c12.c12,
.c12:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c12[value]::-moz-progress-bar {
  background-color: #710252;
}

.c13 {
  width: 100%;
  border: none;
  height: 8px;
}

.c13.c13,
.c13::-webkit-progress-value,
.c13[value]::-webkit-progress-bar,
.c13:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c13:not(value)::-moz-progress-bar,
.c13[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c13:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c13::-webkit-progress-value {
  background-color: undefined;
}

.c13.c13,
.c13:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c13[value]::-moz-progress-bar {
  background-color: undefined;
}

.c14 {
  width: 100%;
  border: none;
  height: 8px;
}

.c14.c14,
.c14::-webkit-progress-value,
.c14[value]::-webkit-progress-bar,
.c14:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c14:not(value)::-moz-progress-bar,
.c14[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c14:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c14::-webkit-progress-value {
  background-color: #9898A6;
}

.c14.c14,
.c14:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c14[value]::-moz-progress-bar {
  background-color: #9898A6;
}

.c15 {
  width: 100%;
  border: none;
  height: 8px;
}

.c15.c15,
.c15::-webkit-progress-value,
.c15[value]::-webkit-progress-bar,
.c15:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c15:not(value)::-moz-progress-bar,
.c15[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c15:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c15::-webkit-progress-value {
  background-color: #6B6B78;
}

.c15.c15,
.c15:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c15[value]::-moz-progress-bar {
  background-color: #6B6B78;
}

.c16 {
  width: 100%;
  border: none;
  height: 8px;
}

.c16.c16,
.c16::-webkit-progress-value,
.c16[value]::-webkit-progress-bar,
.c16:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c16:not(value)::-moz-progress-bar,
.c16[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c16:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c16::-webkit-progress-value {
  background-color: #D7D7E0;
}

.c16.c16,
.c16:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c16[value]::-moz-progress-bar {
  background-color: #D7D7E0;
}

.c17 {
  width: 100%;
  border: none;
  height: 8px;
}

.c17.c17,
.c17::-webkit-progress-value,
.c17[value]::-webkit-progress-bar,
.c17:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c17:not(value)::-moz-progress-bar,
.c17[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c17:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c17::-webkit-progress-value {
  background-color: #F5F5FA;
}

.c17.c17,
.c17:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c17[value]::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c18 {
  width: 100%;
  border: none;
  height: 8px;
}

.c18.c18,
.c18::-webkit-progress-value,
.c18[value]::-webkit-progress-bar,
.c18:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c18:not(value)::-moz-progress-bar,
.c18[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c18:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c18::-webkit-progress-value {
  background-color: #FFFFFF;
}

.c18.c18,
.c18:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c18[value]::-moz-progress-bar {
  background-color: #FFFFFF;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c19 .c3 {
  max-width: 280px;
  margin-top: 8px;
}

.c20 .c3 {
  max-width: 280px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  width: 22px;
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c21 .c3 {
  width: 22px;
  margin-left: 8px;
}

.c21 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c5"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c6"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c7"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c8"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c9"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c10"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c11"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c12"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c5"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c13"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c14"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c15"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c16"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c17"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c18"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with background color prop system 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 .c1 {
  margin: auto;
}

.c4 .c1 {
  margin: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #D8385E;
}

.c0 .c5 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with border prop system 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 .c1 {
  margin: auto;
}

.c4 .c1 {
  margin: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid;
  border-radius: 8px;
}

.c0 .c5 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with elevation prop system 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 .c1 {
  margin: auto;
}

.c4 .c1 {
  margin: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
}

.c0 .c5 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
    elevation="small"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label number 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 .c3 {
  max-width: 280px;
  margin-top: 8px;
}

.c7 .c3 {
  max-width: 280px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  width: 22px;
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  text-align: right;
}

.c5 .c3 {
  width: 22px;
  margin-left: 8px;
}

.c5 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <p
      class="c3 c4"
    >
      20
    </p>
  </div>
  <div
    class="c5"
  >
    <progress
      class="c1 c2"
      max="100"
      value="65"
    />
    <p
      class="c3 c4"
    >
      65
    </p>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label string 1`] = `
.c1 {
  width: 100%;
  border: none;
  height: 8px;
}

.c1.c1,
.c1::-webkit-progress-value,
.c1[value]::-webkit-progress-bar,
.c1:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-moz-progress-bar,
.c1[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c1:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c1::-webkit-progress-value {
  background-color: #FF874C;
}

.c1.c1,
.c1:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c1[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c2 {
  max-width: 280px;
  margin-top: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  text-align: right;
}

.c4 .c2 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1"
      max="100"
    />
    <p
      class="c2 c3"
    >
      Some decription here
    </p>
  </div>
  <div
    class="c4"
  >
    <progress
      class="c1"
      max="100"
      value="65"
    />
    <p
      class="c2 c3"
    >
      Some decription here
    </p>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with positions prop system 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 .c1 {
  margin: auto;
}

.c4 .c1 {
  margin: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: fixed;
  top: 16px;
  left: 16px;
}

.c0 .c5 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with spacing prop system 1`] = `
.c2 {
  width: 100%;
  border: none;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #FF874C;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #FF874C;
}

.c3 .c1 {
  margin: auto;
}

.c4 .c1 {
  margin: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin: 16px;
  padding: 20px;
}

.c0 .c5 {
  max-width: 280px;
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
</div>
`;
